--- a/app/templates/groupBet/group-during.html
+++ b/app/templates/groupBet/group-during.html
@@ -2,7 +2,7 @@
 
 <div>
     <h4 style="display: inline-block;">Végeredmény-tipp:</h4>
-    <h4 style="display: inline-block;">{{final_bet.hun_name}} -  </h4>
+    <h4 style="display: inline-block;">{{final_bet.local_name}} -  </h4>
     <h4 style="display: inline-block;" id="resultID">{{final_bet.result}} </h4>
     <a href="./final-odds">(Szorzó: {{final_bet.multiplier}})</a>
     <h4 style="display: inline-block; padding-left: 1.5em;">Tét: {{final_bet.betting_amount}}</h4>
@@ -27,7 +27,7 @@
         <div class="list-group-item" style="background-color: #b8b8b8;">Tipp</div>
 
         {% for i in range(4) %}
-        <div class="list-group-item">{{i + 1}}. {{group.bets[i].hun_name}}</div>
+        <div class="list-group-item">{{i + 1}}. {{group.bets[i].local_name}}</div>
         {% endfor %}
     </div>
 </div>
