--- a/app/templates/home-page.html
+++ b/app/templates/home-page.html
@@ -42,15 +42,28 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-block">
-                        {% if match_id %}
-                        <div style="background-color: lime; width: 15em;" >
-                            {{match_id}}. meccs-tipp frissítve!
+                        {% if match_state %}
+                            {% if match_state == "invalid" %}
+                                {% set text = "Érvénytelen meccs!" %}
+                                {% set color = "lightcoral" %}
+                            {% elif match_state == "started" %}
+                                {% set text = match_id + ". meccsre már nem lehet fogadni!" %}
+                                {% set color = "lightcoral" %}
+                            {% elif match_state == "group" %}
+                                {% set text =  "Végső- és csoportkörfogadások sikeresen beállítva!" %}
+                                {% set color = "lime" %}                            
+                            {% elif match_state == "nonstarted" %}
+                                {% set text = match_id + ". meccs-tipp sikeresen módosítva!" %}
+                                {% set color = "lime" %}
+                            {% endif %}
+                        <div style="background-color: {{color}}; font-weight: bold;" >
+                            {{text}}
                         </div>
                         {% endif %}
 
                         <br>
                         {% with messages = get_flashed_messages() %}
-                            {% if messages %}
+                            {% if messages|length > 0%}
                                 <div>Üzenetek: </div>
                                 {% for message in messages %}
                                 {%if message != "" %}
@@ -64,7 +77,6 @@
                         <br>
                         
                         <p style="font-size: 20px;">Jelenlegi egyenleg: {{current_amount}}</p>
-                        <div>Találati arányok: </div>
 
                         <table>
                             {% for day in days %}
@@ -119,7 +131,7 @@
                                     <td style="text-align:center;">{{match.goal1}}-{{match.goal2}}</td>
                                     <td style="text-align:center;">{{match.bet}} / {{match.max_bet}}</td>
                                     <!--input type="image" src="http://example.com/path/to/image.png" /-->
-                                    <td><button class="editbtn" value="1" onclick="redirectToEdit(this.value)">Szerkeszt</button></td>
+                                    <td><button class="editbtn" value="{{match.ID}}" onclick="redirectToEdit(this.value)">Szerkeszt</button></td>
                                 </tr>
 
                                 {% endfor %}
@@ -136,6 +148,9 @@
                                 console.log("arg: " + buttonID);
                                 window.location = "./match?matchID=" + buttonID;
                             }
+
+                            var url= document.location.href;
+                            window.history.pushState({}, "", url.split("?")[0]);
                         </script>
 
                     </div>
