Scheduler + other fixes

--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -44,7 +44,7 @@
                     <!-- ============================================================== -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" 
-                            href="/page-profile.html">
+                            href="/page-profile">
                             <!--img src="/static/assets/images/users/1.jpg" alt="user" class="profile-pic m-r-10" /-->
                             {% if username %}
                             {{username}}
