--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -133,26 +133,43 @@
                                 </select>
                             </div-->
 
-                             <div class="form-group" style="padding-left:1em;">
-                                <label class="form-group">Meccs-emlékeztetők emailben (meccskezdés előtt egy órával)</label>
+                            <div class="form-group" style="padding-left:1em;">
+                                <label class="form-group">Meccs-emlékeztetők emailben</label>
 
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="reminder" id="exampleRadios1" value="nonBetOnly" {% if reminder == "nonBetOnly" %} checked {%endif%}>
+                                    <input class="form-check-input" type="radio" name="reminder" id="exampleRadios1" value="0" {% if reminder == 0 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios1">
-                                        Nem tippelt meccsek előtt
+                                        Nem tippelt meccsek előtt 1 órával
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="reminder" id="exampleRadios2" value="every" {% if reminder == "every" %} checked {%endif%}>
+                                    <input class="form-check-input" type="radio" name="reminder" id="exampleRadios2" value="1" {% if reminder == 1 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios2">
-                                        Minden meccs előtt  
+                                        Minden meccs-nap az első meccs előtt 1 órával
                                     </label>
                                 </div>
 
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="reminder" id="exampleRadios3" value="none" {% if reminder == "none" %} checked {%endif%}>
+                                    <input class="form-check-input" type="radio" name="reminder" id="exampleRadios3" value="2" {% if reminder == 2 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios3">
                                         Nem kérek emlékeztetőt
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="form-group" style="padding-left:1em;">
+                                <label class="form-group">Állásközlő email nap végén: </label>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="summary" id="summaryRadios1" value="0" {% if summary == 0 %} checked {%endif%}>
+                                    <label class="form-check-label" for="summaryRadios1">
+                                        Nem kérek
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="summary" id="summaryRadios2" value="1" {% if summary == 1 %} checked {%endif%}>
+                                    <label class="form-check-label" for="summaryRadios2">
+                                        Kérek
                                     </label>
                                 </div>
                             </div>
@@ -191,7 +208,7 @@
                             <br>
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <button class="btn btn-success">Regisztráció</button> &nbsp;&nbsp; Van már fiókod? <a href="/login.html">Bejelentkezés</a>
+                                    <button class="btn btn-success">Regisztráció</button> &nbsp;&nbsp; Van már fiókod? <a href="/login">Bejelentkezés</a>
                                 </div>
                             </div>
 
