--- a/app/templates/page-404.html
+++ b/app/templates/page-404.html
@@ -18,9 +18,9 @@
             
             <div class="error-body text-center">
                 <h1>404</h1>
-                <h3 class="text-uppercase">Page Not Found</h3>
-                <p class="text-muted m-t-30 m-b-30">Please contact support if the problem persists.</p>
-                <a href="/" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Home</a>
+                <h3 class="text-uppercase">Az oldal nem található!</h3>
+                <p class="text-muted m-t-30 m-b-30">Rossz helyen (vagy rosszban?) sántikálsz.</p>
+                <a href="/" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Kezdőoldal</a>
             </div>
 
             <footer class="footer text-center"> 
