--- a/app/templates/auth/modify.html
+++ b/app/templates/auth/modify.html
@@ -53,13 +53,13 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios1" value="0" {% if reminder == 0 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios1">
-                                        Nem tippelt meccsek előtt
+                                        Azokon a meccsnapokon amelyiken van olyan meccs, amelyiknél nem lett megrakva tét, első meccs előtt egy órával.
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios2" value="1" {% if reminder == 1 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios2">
-                                        Minden meccs előtt  
+                                        Minden meccsnap, az első meccs előtt 1 órával
                                     </label>
                                 </div>
 
