--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -139,13 +139,13 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios1" value="0" {% if reminder == 0 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios1">
-                                        Nem tippelt meccsek előtt 1 órával
+                                        Azokon a meccsnapokon amelyiken van olyan meccs, amelyiknél nem lett megrakva tét, első meccs előtt egy órával.
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios2" value="1" {% if reminder == 1 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios2">
-                                        Minden meccs-nap az első meccs előtt 1 órával
+                                        Minden meccsnap, az első meccs előtt 1 órával
                                     </label>
                                 </div>
 
@@ -158,7 +158,7 @@
                             </div>
 
                             <div class="form-group" style="padding-left:1em;">
-                                <label class="form-group">Állásközlő email nap végén: </label>
+                                <label class="form-group">Állásközlő email meccsnap végén: </label>
 
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="summary" id="summaryRadios1" value="0" {% if summary == 0 %} checked {%endif%}>
