--- a/app/templates/groupBet/group-during.html
+++ b/app/templates/groupBet/group-during.html
@@ -6,7 +6,7 @@
     <h4 style="display: inline-block;" id="resultID">{{final_bet.result}} </h4>
     <a href="./final-odds">(Szorzó: {{final_bet.multiplier}})</a>
     <h4 style="display: inline-block; padding-left: 1.5em;">Tét: {{final_bet.betting_amount}}</h4>
-    <h4 style="display: inline-block; padding-left: 1em;">Várható nyeremény: {{final_bet.betting_amount * final_bet.multiplier}}</h4>
+    <h4 style="display: inline-block; padding-left: 1em;">Várható nyeremény: {{(final_bet.betting_amount * final_bet.multiplier)|round(2)}}</h4>
 
     <br>
     <h4>Felhasználható összeg csoportkör tipp után: {{amount_after}}</h4>
