--- a/app/templates/home-page.html
+++ b/app/templates/home-page.html
@@ -11,6 +11,15 @@
 {% endblock stylesheets %}
 
 {% block content %}
+    <script>
+        var remark_config = {
+            host: "{{REMARK42_URL}}",
+            site_id: "{{REMARK42_SITE_ID}}",
+        }
+    </script>
+  
+  <script>!function(e,n){for(var o=0;o<e.length;o++){var r=n.createElement("script"),c=".js",d=n.head||n.body;"noModule"in r?(r.type="module",c=".mjs"):r.async=!0,r.defer=!0,r.src=remark_config.host+"/web/"+e[o]+c,d.appendChild(r)}}(remark_config.components||["embed"],document);</script>
+
 
     <div class="container-fluid">
         <!-- ============================================================== -->
@@ -177,6 +186,9 @@
                 </div>
             </div>
         </div>
+
+        <div id="remark42"></div>
+
         <!-- ============================================================== -->
         <!-- End PAge Content -->
         <!-- ============================================================== -->
