--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,7 +1,7 @@
 
 {% extends "layouts/base-unsigned.html" %}
 
-{% block title %} Register {% endblock %} 
+{% block title %} Regisztráció {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
