--- a/app/templates/layouts/base-fullscreen.html
+++ b/app/templates/layouts/base-fullscreen.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="noindex,nofollow">
 
     <title>
-        Jinja Material Lite - {% block title %}{% endblock %} | AppSeed
+        Tippbajnokság - {% block title %}{% endblock %} | Margitai Péter
     </title>
 
     <!-- Favicon icon -->
