--- a/app/templates/layouts/base-unsigned.html
+++ b/app/templates/layouts/base-unsigned.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex,nofollow">
 
     <title>
-        Jinja Material Lite - {% block title %}{% endblock %} | AppSeed
+        Tippbajnokság - {% block title %}{% endblock %} | Margitai Péter
     </title>
 
     <!-- Favicon icon -->
@@ -60,7 +60,7 @@
 
             {% block content %}{% endblock content %}
 
-            {% include 'includes/footer.html' %}
+            {# % include 'includes/footer.html' % #}
 
         </div>
 
