--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex,nofollow">
 
     <title>
-        Fogadás - {% block title %}{% endblock %}
+        Tippbajnokság - {% block title %}{% endblock %}
     </title>
 
     <!-- Favicon icon -->
@@ -62,7 +62,7 @@
 
             {% block content %}{% endblock content %}
 
-            {% include 'includes/footer.html' %}
+            {# % include 'includes/footer.html' % #}
 
         </div>
 
