--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Korábbi fogadások {% endblock %} 
+{% block title %} Admin {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -16,11 +16,11 @@
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
-                <ol class="breadcrumb">
+                <h3 class="text-themecolor m-b-0 m-t-0">Admin</h3>
+                <!--ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
                     <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
+                </ol-->
             </div>
             <!--div class="col-md-7 col-4 align-self-center">
                 <a target="_blank"
@@ -40,14 +40,29 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-block" style="display: flex; flex-direction: column;">
-                        
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages %}
+                            {% if message == 'UPLOAD_OK' %}
+                    <a style ="color:green;">Fájl sikeresen feltöltve!</a>
+                    <br>
+                            {% endif %}
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+
                     <a href="/admin/message">Főoldali üzenet</a>    
                     <a href="/admin/send-email">Email-küldése mindenkinek</a>
                     <a href="/admin/odd">Meccs-szorzók módosítása</a>
                     <br>
-                    <a href="/admin/group-evaluation">Csoportkör kiértékelés</a>
-                    <a href="/admin/final-bet">Végső tipp kiértékelés</a>
-                        
+                    <a href="/admin/group-evaluation">Csoportkör-kiértékelés</a>
+                    <a href="/admin/final-bet">Végsőtipp-kiértékelés</a>
+                    <!--a href="/admin/upload-team-data">Csapatleíró fájl feltöltése</a-->
+                       
+                    <br>
+                    <button type="button" id="fetchMatch"> Meccseredmény-adatbázis frissítése</button>
+                    <a style ="color:green;" id="fetchResult"></a>
+
                     </div>
                 </div>
             </div>
@@ -59,4 +74,48 @@
 
 {% endblock content %}
 
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script>
+    var fetchResult = document.getElementById("fetchResult");
+
+    var button = document.getElementById("")
+    var sendButton = document.getElementById("fetchMatch");
+    sendButton.onclick = function() {
+        const XHR = new XMLHttpRequest();
+
+        XHR.onload = function() {
+            var responseObject = JSON.parse(XHR.response);
+            var result = responseObject["result"];          
+            
+            if (result == true) {
+                fetchResult.style.color = "green";
+                fetchResult.innerText = "Meccsadatbázis sikeresen frissítve!";
+            }
+            else {
+                fetchResult.style.color = "red";
+                fetchResult.innerText = "Meccsadatbázis frissítése sikertelen!";
+            }
+        };
+
+        XHR.ontimeout = function() {
+            fetchResult.innerText = "Időtúllépés miatt a meccsadatbázis frissítése sikertelen!";
+            fetchResult.style.color = "red";
+        };
+
+        XHR.onerror = function() {
+            alert('Hiba történt a szerverrel való kommunikációban.' );
+        };
+
+        XHR.open('GET', '/admin/fetch-match', true);
+
+        console.log("Button clicked!");
+
+        //XHR.setRequestHeader( 'Content-Type', 'application/json');
+
+        fetchResult.innerText = "Szinkronizálás folyamatban...";
+        fetchResult.style.color = "blue";
+
+        XHR.send(null);
+    };
+</script>
+{% endblock javascripts %}
