--- a/app/templates/admin/upload-team-data.html
+++ b/app/templates/admin/upload-team-data.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Végsőtipp-szorzók {% endblock %} 
+{% block title %} Admin/Csaptleíró-fájl feltöltése {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -16,11 +16,11 @@
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Végsőtipp-szorzók</h3>
-                <!--ol class="breadcrumb">
+                <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
+                <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
                     <li class="breadcrumb-item active">Dashboard</li>
-                </ol-->
+                </ol>
             </div>
             <!--div class="col-md-7 col-4 align-self-center">
                 <a target="_blank"
@@ -29,52 +29,35 @@
                     More Starters
                 </a>
             </div-->
-        </div-->
+        </div>
         <!-- ============================================================== -->
         <!-- End Bread crumb and right sidebar toggle -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- Start Page Content -->
         <!-- ============================================================== -->
-        <script src="https://sortablejs.github.io/Sortable/Sortable.js"></script>
-
         <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-block">
-
-                        <table style="width:100%;margin-left:20px;">
-                            <tr>
-                                <th rowspan="1" style="width: 34%;text-align:left;">Ország</th>
-                                <th rowspan="1" style="width: 16%;text-align:center;">Top1</th>
-                                <th rowspan="1" style="width: 16%;text-align:center;">Top2</th>
-                                <th rowspan="1" style="width: 16%;text-align:center;">Top4</th>
-                                <th rowspan="1" style="width: 16%;text-align:center;">Top16</th>
-                            </tr>
-                    
-                            {% for team in teams %}
-                            {% set background = 'white' %}
-
-                            {% if loop.index %2 == 1 %}
-                            {% set background = '#E8E8E8' %}
+                        {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                                {% for message in messages %}
+                                {{message}}
+                                {% endfor %}
                             {% endif %}
+                        {% endwith %}
 
-                            <tr style="padding-bottom:5px;background-color:{{background}};">                            
-                                <td style="text-align:left;">{{team.name}}</td>
-                                <td style="text-align:center;">{{team.top1}}</td>
-                                <td style="text-align:center;">{{team.top2}}</td>
-                                <td style="text-align:center;">{{team.top4}}</td>
-                                <td style="text-align:center;">{{team.top16}}</td>
-                            </tr>
-                            {% endfor %}
-                        </table>
-
+                        <h2>A csapatleíró fájl feltöltése</h2>
+                        <form method=post enctype=multipart/form-data>
+                            <input type=file name=file>
+                            <input type=submit value=Feltöltés>
+                        </form>
                         
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- ============================================================== -->
         <!-- End PAge Content -->
         <!-- ============================================================== -->
