--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,7 @@
 
 {% extends "layouts/base-unsigned.html" %}
 
-{% block title %} Login {% endblock %} 
+{% block title %} Bejelenkezés {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -20,7 +20,7 @@
             <div class="col-md-5 col-8 align-self-center">
                 <h3 class="text-themecolor m-b-0 m-t-0">Bejelenkezés</h3>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <!--li class="breadcrumb-item"><a href="/">Home</a></li-->
                 </ol>
             </div>
             <!--div class="col-md-7 col-4 align-self-center">
