--- a/app/templates/auth/modify.html
+++ b/app/templates/auth/modify.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Blank Page {% endblock %} 
+{% block title %} Profil-beállítások {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -16,19 +16,19 @@
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
-                <ol class="breadcrumb">
+                <h3 class="text-themecolor m-b-0 m-t-0">Profil</h3>
+                <!--ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
                     <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
+                </ol-->
             </div>
-            <div class="col-md-7 col-4 align-self-center">
+            <!--div class="col-md-7 col-4 align-self-center">
                 <a target="_blank"
                    href="https://appseed.us"
                     class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">
                     More Starters
                 </a>
-            </div>
+            </div-->
         </div>
         <!-- ============================================================== -->
         <!-- End Bread crumb and right sidebar toggle -->
