--- a/app/templates/auth/register-fail.html
+++ b/app/templates/auth/register-fail.html
@@ -1,6 +1,7 @@
-{% extends "layouts/base.html" %}
 
-{% block title %} Admin/Üzenetek beállítása {% endblock %} 
+{% extends "layouts/base-unsigned.html" %}
+
+{% block title %} Sikertelen regisztráció {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -11,15 +12,15 @@
 {% block content %}
 
     <div class="container-fluid">
+        
         <!-- ============================================================== -->
         <!-- Bread crumb and right sidebar toggle -->
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Főoldali üzenet beállítása</h3>
+                <h3 class="text-themecolor m-b-0 m-t-0">Bejelenkezés</h3>
                 <!--ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
                 </ol-->
             </div>
             <!--div class="col-md-7 col-4 align-self-center">
@@ -36,39 +37,20 @@
         <!-- ============================================================== -->
         <!-- Start Page Content -->
         <!-- ============================================================== -->
+        <!-- Row -->
         <div class="row">
-            <div class="col-12">
+
+            <!-- Column -->
+            <div class="col-lg-8 col-xlg-9 col-md-7">
                 <div class="card">
                     <div class="card-block">
-
-                        {% if success_message is not none %}
-                        <div style="color: green; font-weight: 500;">
-                            Üzenetek sikeresen frissítve!
-                        </div>
-                        <br>
-                        {% endif %}
-
-                        Itt beállíthatod a főoldalon megjelenő üzenetekete!
-                        <br>
-
-                        <form action="/admin/message" method="POST" >
-                            {% for message in messages %} 
-                            <div>
-                                <label for="{{message.id}}" style="vertical-align: top;">Üzenet {{loop.index}}:</label>
-
-                                <textarea id="{{message.id}}" name="{{message.id}}" rows="4" cols="50">{{message.text}}</textarea>     
-                            </div>                            
-
-                            <br>
-
-                            {% endfor %}
-
-                            <button class="btn btn-success">Mentés</button>
-                        </form>                         
+                        A tippjáték-verseny elkezdődött, így a regsztráció lezárult. Sajnálom!                        
                     </div>
                 </div>
             </div>
+            <!-- Column -->
         </div>
+        <!-- Row -->
         <!-- ============================================================== -->
         <!-- End PAge Content -->
         <!-- ============================================================== -->
