--- a/app/templates/groupBet/group-choose.html
+++ b/app/templates/groupBet/group-choose.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Korábbi fogadások {% endblock %} 
+{% block title %} Csoportkör-tippek {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -16,11 +16,11 @@
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
-                <ol class="breadcrumb">
+                <h3 class="text-themecolor m-b-0 m-t-0">Csoportkör-fogadások</h3>
+                <!--ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
                     <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
+                </ol-->
             </div>
             <!--div class="col-md-7 col-4 align-self-center">
                 <a target="_blank"
@@ -50,56 +50,6 @@
                         <div id="resultNode">
                             Betöltés folyamatban...
                         </div>
-
-                        <script type="module">
-                            var resultNamemap = {
-                                "0" : "Győztes",
-                                "1" : "Döntős",
-                                "2" : "Elődöntős",
-                                "3" : "Csoporkörön túl"
-                            }
-                            var listSelector = document.getElementById("players");
-
-                            window.onload = function() {
-                                askPlayerPreviousBets(String(listSelector.value));
-                            }
-
-                            var betMap = new Map();
-
-                            var resultNode = document.getElementById("resultNode");
-
-                            function askPlayerPreviousBets(nameID) {
-                                console.log("Map doesn't contain the key: " + nameID);
-
-                                var resultRequest = new XMLHttpRequest();
-                                resultRequest.open("GET", "./group?name=" +nameID);
-                                
-                                resultRequest.onload = function() {
-                                    resultNode.innerHTML = resultRequest.response;
-                                    betMap.set(nameID, resultRequest.response);
-
-                                    var result = document.getElementById("resultID");
-                                    result.innerText = resultNamemap[result.innerText];
-                                }
-
-                                resultRequest.ontimeout = function() {
-                                    resultNode.innerHTML = "Megszakadt a kapcsolat a kiszolgálóval!";
-                                }
-
-                                resultRequest.send();
-                            }
-                            
-                            listSelector.onchange = function() {
-                                if (betMap.get(this.value) == null) {
-                                    resultNode.innerHTML = "Betöltés folyamatban...";
-                                    askPlayerPreviousBets(this.value);
-                                }
-                                else {
-                                    resultNode.innerHTML = betMap.get(this.value);
-                                }
-                            }
-
-                        </script>
                     </div>
                 </div>
             </div>
@@ -111,4 +61,54 @@
 
 {% endblock content %}
 
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script type="module">
+    var resultNamemap = {
+        "0" : "Győztes",
+        "1" : "Döntős",
+        "2" : "Elődöntős",
+        "3" : "Csoporkörön túl"
+    }
+    var listSelector = document.getElementById("players");
+
+    window.onload = function() {
+        askPlayerPreviousBets(String(listSelector.value));
+    }
+
+    var betMap = new Map();
+
+    var resultNode = document.getElementById("resultNode");
+
+    function askPlayerPreviousBets(nameID) {
+        console.log("Map doesn't contain the key: " + nameID);
+
+        var resultRequest = new XMLHttpRequest();
+        resultRequest.open("GET", "./group?name=" +nameID);
+        
+        resultRequest.onload = function() {
+            resultNode.innerHTML = resultRequest.response;
+            betMap.set(nameID, resultRequest.response);
+
+            var result = document.getElementById("resultID");
+            result.innerText = resultNamemap[result.innerText];
+        }
+
+        resultRequest.ontimeout = function() {
+            resultNode.innerHTML = "Megszakadt a kapcsolat a kiszolgálóval!";
+        }
+
+        resultRequest.send();
+    }
+    
+    listSelector.onchange = function() {
+        if (betMap.get(this.value) == null) {
+            resultNode.innerHTML = "Betöltés folyamatban...";
+            askPlayerPreviousBets(this.value);
+        }
+        else {
+            resultNode.innerHTML = betMap.get(this.value);
+        }
+    }
+
+</script>
+{% endblock javascripts %}
