--- a/app/templates/groupBet/group-edit.html
+++ b/app/templates/groupBet/group-edit.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Csoportkör-fogadások {% endblock %} 
+{% block title %} Csoportkör-tippek {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -16,11 +16,11 @@
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
-                <ol class="breadcrumb">
+                <h3 class="text-themecolor m-b-0 m-t-0">Csoportkör-fogadások</h3>
+                <!--ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
                     <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
+                </ol-->
             </div>
             <!--div class="col-md-7 col-4 align-self-center">
                 <a target="_blank"
@@ -42,202 +42,6 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-block">
-
-                        <script>
-                            var sortableArray = [];
-
-                            function populateSortableArray() {
-                                {% for group in groups %}
-                                sortableArray.push(["{{group.ID}}", new Sortable(document.getElementById('list-{{group.ID}}'), {
-                                    animation: 150,
-                                    ghostClass: 'blue-background-class'
-                                })]);
-                                {% endfor %}
-
-                                teamSelect.value = "{{final_bet.team}}";
-                                resultSelect.value = "{{final_bet.result}}";
-                            }
-                            
-                            function calculateRemainingBetAmount() {
-                                var remainingValue = {{start_amount}};
-
-                                for (const sortableElement of sortableArray) {
-                                    let[groupID, group] = sortableElement;
-                                    remainingValue -=  document.getElementById("bet-" + groupID).value;
-                                }
-
-                                remainingValue -= finalResultBet.value;
-                                remainingAmount.innerText = remainingValue + " tallér";
-                            }
-
-                        </script>
-
-                        <script type="module">
-                            var resultNamemap = {
-                                "0" : "Győztes",
-                                "1" : "Döntős",
-                                "2" : "Elődöntős",
-                                "3" : "Csoporkörön túl"
-                            }
-
-                            var scores = {
-                            {% for group in groups%}
-                                {% for team in group.teams %} "{{team.name}}" : [{{team.top1}}, {{team.top2}}, {{team.top4}}, {{team.top16}}],{% endfor %}
-                            {% endfor %}
-                            }
-
-                            var namemap = {
-                            {% for group in groups%}
-                                {% for team in group.teams %} "{{team.name}}" : "{{team.local_name}}",{% endfor %}
-                            {% endfor %}
-                            };
-
-                            var teamSelect = document.getElementById("teamSelect");
-                            var resultSelect = document.getElementById("resultSelect");
-                            var finalResultOdd = document.getElementById("finalResultOdd");
-                            var finalResultBet = document.getElementById("finalResultBet");
-                            var expectedWinAmount = document.getElementById("expectedWinAmount");
-
-                            for (const [key, value] of Object.entries(scores)) {
-                                //console.log(`${key}: ${value}`);
-                                teamSelect.options[teamSelect.options.length] = new Option(namemap[key], key);
-                            }
-
-                            for (let i = 0; i < 4; i++) {
-                                resultSelect.options[resultSelect.options.length] = new Option(resultNamemap[`${i}`], i);
-                            }
-
-                            function updateFinalBet() {
-                                var teamID = teamSelect.options[teamSelect.selectedIndex].value;
-                                var resultID = resultSelect.options[resultSelect.selectedIndex].value;
-
-                                var odd = scores[teamID][resultID];
-                                finalResultOdd.innerText = odd;
-                                finalResultOdd.value = odd;
-
-                                expectedWinAmount.value = Math.round(odd * finalResultBet.value * 100) / 100;
-
-                                calculateExpectedWinAmount();
-                            }
-
-                            function calculateExpectedWinAmount() {
-                                expectedWinAmount.value = Math.round(parseFloat(finalResultOdd.value) * finalResultBet.value * 100) / 100;
-                                expectedWinAmount.innerText = Math.round(parseFloat(finalResultOdd.value) * finalResultBet.value * 100) / 100;
-                            }
-
-                            teamSelect.onchange = updateFinalBet;
-                            resultSelect.onchange = updateFinalBet;
-
-                            finalResultBet.oninput = function() {
-                                if (this.value > {{max_final_bet_value}}) {
-                                    this.value = {{max_final_bet_value}};
-                                    this.innerText = {{max_final_bet_value}};
-                                }
-
-                                if (this.value < 0) {
-                                    this.value = 0;
-                                    this.innerText = 0;
-                                }
-
-                                calculateExpectedWinAmount();
-                                calculateRemainingBetAmount();
-                            }
-
-                            var sendButton = document.getElementById("sendButton");
-                            sendButton.onclick = function() {
-                                console.log( 'Sending data' );
-
-                                const XHR = new XMLHttpRequest();
-
-                                XHR.onload = function() {
-                                    var responseObject = JSON.parse(XHR.response);
-                                    
-                                    if (responseObject["result"] == "OK") {
-                                        window.location.href = "./?match_state=group";
-                                    }
-                                    else if (responseObject["result"] == "error") {
-                                        var info = responseObject["info"];
-
-                                        var errorMessage = "";
-
-                                        switch(info) {
-                                            case "FINAL_TEAM":
-                                            errorMessage = "A végső tippnél megadott csapat nem létezik.";
-                                            break;
-
-                                            case "FINAL_RESULT":
-                                            errorMessage = "Hibás végsőtipp eredmény.";
-                                            break;
-
-                                            case "FINAL_BET":
-                                            errorMessage = "Hibás végsőtipp fogadási mennyiség.";
-                                            break;
-
-                                            case "GROUP_BET":
-                                            errorMessage = "Hibás fogadási mennyiség a csoportkörtippnél.";
-                                            break;
-
-                                            case "GROUP_ID":
-                                            errorMessage = "Hibás csoport azonosító.";
-                                            break;
-
-                                            case "GROUP_TEAM":
-                                            errorMessage = "Hibás csapatnév a csoportkörnél.";
-                                            console.log("GROUP_TEAM_ERROR");
-                                            break;
-                                        }
-                                        
-                                        var errorMessageNode = document.getElementById("errorMessage");
-                                        errorMessageNode.innerText = errorMessage;
-                                    }
-                                }
-
-                                XHR.onerror = function() {
-                                    alert('Hiba történt a szerverrel való kommunikációban.' );
-                                }
-
-                                // Set up our request
-                                XHR.open('POST', '/group', true);
-
-                                // Add the required HTTP header for form data POST requests
-                                //XHR.setRequestHeader( 'Content-Type', 'application/x-www-form-urlencoded' );
-                                XHR.setRequestHeader( 'Content-Type', 'application/json' );
-                                
-                                var output = {};
-
-                                var finalObject = {"team" : teamSelect.options[teamSelect.selectedIndex].value, "result" : resultSelect.options[resultSelect.selectedIndex].value, "bet" : document.getElementById("finalResultBet").value};
-                                output["final"] = finalObject;
-
-                                var groupsObject = {};
-
-                                for (const sortableElement of sortableArray) {
-                                    let[groupID, group] = sortableElement;
-
-                                    var groupObject = {}
-
-                                    groupObject["bet"] = document.getElementById("bet-" + groupID).value;
-                                    groupObject["order"] = group.toArray();
-
-                                    groupsObject[groupID] = groupObject;
-                                }
-
-                                output["group"] = groupsObject;
-                                 
-                                console.log("out: " + JSON.stringify(output));
-
-                                XHR.send(JSON.stringify(output));
-                            }
-
-                            var remainingAmount = document.getElementById("remainingAmount");
-
-                            window.onload = function() {
-                                populateSortableArray();
-                                updateFinalBet();
-                                calculateRemainingBetAmount();
-                            }
-
-                        </script>                       
-
                         <div>Kezdőtőke: {{start_amount}}</div>
 
                         <div>
@@ -310,4 +114,199 @@
 
 {% endblock content %}
 
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script>
+    var sortableArray = [];
+
+    function populateSortableArray() {
+        {% for group in groups %}
+        sortableArray.push(["{{group.ID}}", new Sortable(document.getElementById('list-{{group.ID}}'), {
+            animation: 150,
+            ghostClass: 'blue-background-class'
+        })]);
+        {% endfor %}
+
+        teamSelect.value = "{{final_bet.team}}";
+        resultSelect.value = "{{final_bet.result}}";
+    }
+    
+    function calculateRemainingBetAmount() {
+        var remainingValue = {{start_amount}};
+
+        for (const sortableElement of sortableArray) {
+            let[groupID, group] = sortableElement;
+            remainingValue -=  document.getElementById("bet-" + groupID).value;
+        }
+
+        remainingValue -= finalResultBet.value;
+        remainingAmount.innerText = remainingValue + " tallér";
+    }
+</script>
+
+<script type="module">
+    var resultNamemap = {
+        "0" : "Győztes",
+        "1" : "Döntős",
+        "2" : "Elődöntős",
+        "3" : "Csoporkörön túl"
+    }
+
+    var scores = {
+    {% for group in groups%}
+        {% for team in group.teams %} "{{team.name}}" : [{{team.top1}}, {{team.top2}}, {{team.top4}}, {{team.top16}}],{% endfor %}
+    {% endfor %}
+    }
+
+    var namemap = {
+    {% for group in groups%}
+        {% for team in group.teams %} "{{team.name}}" : "{{team.local_name}}",{% endfor %}
+    {% endfor %}
+    };
+
+    var teamSelect = document.getElementById("teamSelect");
+    var resultSelect = document.getElementById("resultSelect");
+    var finalResultOdd = document.getElementById("finalResultOdd");
+    var finalResultBet = document.getElementById("finalResultBet");
+    var expectedWinAmount = document.getElementById("expectedWinAmount");
+
+    for (const [key, value] of Object.entries(scores)) {
+        //console.log(`${key}: ${value}`);
+        teamSelect.options[teamSelect.options.length] = new Option(namemap[key], key);
+    }
+
+    for (let i = 0; i < 4; i++) {
+        resultSelect.options[resultSelect.options.length] = new Option(resultNamemap[`${i}`], i);
+    }
+
+    function updateFinalBet() {
+        var teamID = teamSelect.options[teamSelect.selectedIndex].value;
+        var resultID = resultSelect.options[resultSelect.selectedIndex].value;
+
+        var odd = scores[teamID][resultID];
+        finalResultOdd.innerText = odd;
+        finalResultOdd.value = odd;
+
+        expectedWinAmount.value = Math.round(odd * finalResultBet.value * 100) / 100;
+
+        calculateExpectedWinAmount();
+    }
+
+    function calculateExpectedWinAmount() {
+        expectedWinAmount.value = Math.round(parseFloat(finalResultOdd.value) * finalResultBet.value * 100) / 100;
+        expectedWinAmount.innerText = Math.round(parseFloat(finalResultOdd.value) * finalResultBet.value * 100) / 100;
+    }
+
+    teamSelect.onchange = updateFinalBet;
+    resultSelect.onchange = updateFinalBet;
+
+    finalResultBet.oninput = function() {
+        if (this.value > {{max_final_bet_value}}) {
+            this.value = {{max_final_bet_value}};
+            this.innerText = {{max_final_bet_value}};
+        }
+
+        if (this.value < 0) {
+            this.value = 0;
+            this.innerText = 0;
+        }
+
+        calculateExpectedWinAmount();
+        calculateRemainingBetAmount();
+    }
+
+    var sendButton = document.getElementById("sendButton");
+    sendButton.onclick = function() {
+        console.log( 'Sending data' );
+
+        const XHR = new XMLHttpRequest();
+
+        XHR.onload = function() {
+            var responseObject = JSON.parse(XHR.response);
+            
+            if (responseObject["result"] == "OK") {
+                window.location.href = "./?match_state=group";
+            }
+            else if (responseObject["result"] == "error") {
+                var info = responseObject["info"];
+
+                var errorMessage = "";
+
+                switch(info) {
+                    case "FINAL_TEAM":
+                    errorMessage = "A végső tippnél megadott csapat nem létezik.";
+                    break;
+
+                    case "FINAL_RESULT":
+                    errorMessage = "Hibás végsőtipp eredmény.";
+                    break;
+
+                    case "FINAL_BET":
+                    errorMessage = "Hibás végsőtipp fogadási mennyiség.";
+                    break;
+
+                    case "GROUP_BET":
+                    errorMessage = "Hibás fogadási mennyiség a csoportkörtippnél.";
+                    break;
+
+                    case "GROUP_ID":
+                    errorMessage = "Hibás csoport azonosító.";
+                    break;
+
+                    case "GROUP_TEAM":
+                    errorMessage = "Hibás csapatnév a csoportkörnél.";
+                    console.log("GROUP_TEAM_ERROR");
+                    break;
+                }
+                
+                var errorMessageNode = document.getElementById("errorMessage");
+                errorMessageNode.innerText = errorMessage;
+            }
+        }
+
+        XHR.onerror = function() {
+            alert('Hiba történt a szerverrel való kommunikációban.' );
+        }
+
+        // Set up our request
+        XHR.open('POST', '/group', true);
+
+        // Add the required HTTP header for form data POST requests
+        //XHR.setRequestHeader( 'Content-Type', 'application/x-www-form-urlencoded' );
+        XHR.setRequestHeader( 'Content-Type', 'application/json' );
+        
+        var output = {};
+
+        var finalObject = {"team" : teamSelect.options[teamSelect.selectedIndex].value, "result" : resultSelect.options[resultSelect.selectedIndex].value, "bet" : document.getElementById("finalResultBet").value};
+        output["final"] = finalObject;
+
+        var groupsObject = {};
+
+        for (const sortableElement of sortableArray) {
+            let[groupID, group] = sortableElement;
+
+            var groupObject = {}
+
+            groupObject["bet"] = document.getElementById("bet-" + groupID).value;
+            groupObject["order"] = group.toArray();
+
+            groupsObject[groupID] = groupObject;
+        }
+
+        output["group"] = groupsObject;
+         
+        console.log("out: " + JSON.stringify(output));
+
+        XHR.send(JSON.stringify(output));
+    }
+
+    var remainingAmount = document.getElementById("remainingAmount");
+
+    window.onload = function() {
+        populateSortableArray();
+        updateFinalBet();
+        calculateRemainingBetAmount();
+    }
+
+</script>          
+
+{% endblock javascripts %}
