--- a/app/templates/home-page.html
+++ b/app/templates/home-page.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Blank Page {% endblock %} 
+{% block title %} Kezdőoldal {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -11,35 +11,25 @@
 {% endblock stylesheets %}
 
 {% block content %}
-    <script>
-        var remark_config = {
-            host: "{{REMARK42_URL}}",
-            site_id: "{{REMARK42_SITE_ID}}",
-        }
-    </script>
-  
-  <script>!function(e,n){for(var o=0;o<e.length;o++){var r=n.createElement("script"),c=".js",d=n.head||n.body;"noModule"in r?(r.type="module",c=".mjs"):r.async=!0,r.defer=!0,r.src=remark_config.host+"/web/"+e[o]+c,d.appendChild(r)}}(remark_config.components||["embed"],document);</script>
-
-
     <div class="container-fluid">
         <!-- ============================================================== -->
         <!-- Bread crumb and right sidebar toggle -->
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
-                <ol class="breadcrumb">
+                <h3 class="text-themecolor m-b-0 m-t-0">Fogadás és kibeszélés</h3>
+                <!--ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
                     <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
+                </ol-->
             </div>
-            <div class="col-md-7 col-4 align-self-center">
+            <!--div class="col-md-7 col-4 align-self-center">
                 <a target="_blank"
                    href="https://appseed.us"
                     class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">
                     More Starters
                 </a>
-            </div>
+            </div-->
         </div>
         <!-- ============================================================== -->
         <!-- End Bread crumb and right sidebar toggle -->
@@ -171,17 +161,6 @@
                         {% if days|length == 0 %}
                         <div style="display: inline-block;">A tipp bajnokság véget ért. </div> <div style="display: inline-block;">A végeredményhez</div> <a href="./standings" style="display: inline-block;">kattints ide!</a>
                         {% endif %}
-
-                        <script>
-                            function redirectToEdit(buttonID) {
-                                console.log("arg: " + buttonID);
-                                window.location = "./match?matchID=" + buttonID;
-                            }
-
-                            var url= document.location.href;
-                            window.history.pushState({}, "", url.split("?")[0]);
-                        </script>
-
                     </div>
                 </div>
             </div>
@@ -196,4 +175,25 @@
 
 {% endblock content %}
 
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+
+<script>
+    function redirectToEdit(buttonID) {
+        console.log("arg: " + buttonID);
+        window.location = "./match?matchID=" + buttonID;
+    }
+
+    var url= document.location.href;
+    window.history.pushState({}, "", url.split("?")[0]);
+</script>
+
+<script>
+    var remark_config = {
+        host: "{{REMARK42_URL}}",
+        site_id: "{{REMARK42_SITE_ID}}",
+    }
+</script>
+
+<script>!function(e,n){for(var o=0;o<e.length;o++){var r=n.createElement("script"),c=".js",d=n.head||n.body;"noModule"in r?(r.type="module",c=".mjs"):r.async=!0,r.defer=!0,r.src=remark_config.host+"/web/"+e[o]+c,d.appendChild(r)}}(remark_config.components||["embed"],document);</script>
+
+{% endblock javascripts %}
