--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -10,13 +10,13 @@
                         <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
 
                         <!-- Light Logo icon -->
-                        <img src="/static/assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                        <img src="/static/assets/images/f64t.png" alt="homepage" class="light-logo" />
                     </b>
                     <!--End Logo icon -->
                     <!-- Logo text --><span>
 
                         <!-- Light Logo text -->
-                        <img src="/static/assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span>
+                        <img src="/static/assets/images/hu/title.png" class="light-logo" alt="homepage" width="175px"/></span>
                 </a>
             </div>
             <!-- ============================================================== -->
