--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -5,20 +5,20 @@
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li> <a class="waves-effect waves-dark" href="/" aria-expanded="false"><i
-                            class="mdi mdi-gauge"></i><span class="hide-menu">Fogadás</span></a>
+                            class="mdi mdi-soccer"></i><span class="hide-menu">Fogadás</span></a>
                 </li>
                 <li> <a class="waves-effect waves-dark" href="/prev" aria-expanded="false"><i
-                            class="mdi mdi-account-check"></i><span class="hide-menu">Korábbi fogadások</span></a>
+                            class="mdi mdi-content-paste"></i><span class="hide-menu">Korábbi fogadások</span></a>
                 </li>
                 <li> <a class="waves-effect waves-dark" href="/group" aria-expanded="false"><i
-                            class="mdi mdi-table"></i><span class="hide-menu">Csoportkör fogadások</span></a>
+                            class="mdi mdi-table"></i><span class="hide-menu">Csoportkör-fogadások</span></a>
                 </li>
                 <li> <a class="waves-effect waves-dark" href="/standings" aria-expanded="false"><i
-                            class="mdi mdi-emoticon"></i><span class="hide-menu">Pontverseny állása</span></a>
+                            class="mdi mdi-chart-line"></i><span class="hide-menu">Pontverseny állása</span></a>
                 </li>
                 {% if admin %}
                 <li> <a class="waves-effect waves-dark" href="/admin" aria-expanded="false"><i
-                            class="mdi mdi-earth"></i><span class="hide-menu">Admin</span></a>
+                            class="mdi mdi-account"></i><span class="hide-menu">Admin</span></a>
                 {% endif %}
                 </li>
                 <!--li> <a class="waves-effect waves-dark" href="/page-blank.html" aria-expanded="false"><i
@@ -32,24 +32,24 @@
                 </li>
             </ul>
 
-            <div class="text-center m-t-30">
+            <!--div class="text-center m-t-30">
                 <a target="_blank"
                    href="https://appseed.us"
                    class="btn waves-effect waves-light btn-warning hidden-md-down">More Starters</a>
-            </div>
+            </div-->
 
         </nav>
         <!-- End Sidebar navigation -->
     </div>
     <!-- End Sidebar scroll-->
     <!-- Bottom points-->
-    <div class="sidebar-footer">
-        <!-- item--><a href="/page-profile.html" class="link" data-toggle="tooltip" title="Settings"><i
+    <!--div class="sidebar-footer">
+        <a href="/page-profile.html" class="link" data-toggle="tooltip" title="Settings"><i
                 class="ti-settings"></i></a>
-        <!-- item--><a href="/" class="link" data-toggle="tooltip" title="Email"><i
+        <a href="/" class="link" data-toggle="tooltip" title="Email"><i
                 class="mdi mdi-gmail"></i></a>
-        <!-- item--><a href="/login.html" class="link" data-toggle="tooltip" title="Logout"><i
-                class="mdi mdi-power"></i></a> </div>
+        <a href="/login.html" class="link" data-toggle="tooltip" title="Logout"><i
+                class="mdi mdi-power"></i></a> </div-->
     <!-- End Bottom points-->
 </aside>
 
