--- a/app/templates/match-bet.html
+++ b/app/templates/match-bet.html
@@ -16,19 +16,19 @@
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
-                <ol class="breadcrumb">
+                <h3 class="text-themecolor m-b-0 m-t-0">Tippelés</h3>
+                <!--ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
                     <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
+                </ol-->
             </div>
-            <div class="col-md-7 col-4 align-self-center">
+            <!--div class="col-md-7 col-4 align-self-center">
                 <a target="_blank"
                    href="https://appseed.us"
                     class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">
                     More Starters
                 </a>
-            </div>
+            </div-->
         </div>
         <!-- ============================================================== -->
         <!-- End Bread crumb and right sidebar toggle -->
@@ -51,9 +51,10 @@
                 <div class="card">
                     <div class="card-block">
                         <form action="./match" method="POST" id="betForm" name="betForm">
-                            <div> {{match.ID}}. mérkőzés ({{match.date}} - {{day_names[match.day_id]}} {{match.time}}) - {{match.type}}</div>
-                            
-                            <div style="display: inline-block;">
+                            <div style="font-weight: bold;"> {{match.ID}}. mérkőzés ({{match.date}} - {{day_names[match.day_id]}} {{match.time}}) - Forduló:  {{match.type}} </div>
+                            <br>
+                            <div style="display: inline-block;">Tipp:</div>
+                            <div style="display: inline-block;padding-left: 1em;">
                                 {{match.team1}}
                             </div>
 
@@ -70,24 +71,25 @@
                             </div>
 
                             <div style="display: inline-block;padding-left: 5em;">
-                                <div style="background-color: orange;">
-                                    Oddok: 
-                                    <div style="display: inline-block; padding-left: 5em;">
+                                <div style="background-color: rgb(240, 220, 182);">
+                                    Szorzók: 
+                                    <div style="display: inline-block; padding-left: 3em;">
                                         1: {{match.odd1}}
                                     </div>
 
-                                    <div style="display: inline-block; padding-left: 5em;">
+                                    <div style="display: inline-block; padding-left: 3em;">
                                         X: {{match.oddX}}
                                     </div>
 
-                                    <div style="display: inline-block; padding-left: 5em;">
+                                    <div style="display: inline-block; padding-left: 3em;">
                                         2: {{match.odd2}}
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <div>
-                                <label>Tét: </label>
+                                <br>
+                                <label>Tét:    </label>
                                 <input type="number" size="3" value="{{match.bet}}" name="bet" min="0" max="{{match.max_bet}}" form="betForm"/>
                                 <div style="display: inline-block;"> / {{match.max_bet}}</div>
                             </div>
@@ -102,6 +104,8 @@
                                 {% endif %}
                                 {% endwith %}
                             </div>
+
+                            <br>
 
                             <input type="hidden" id="matchID" name="matchID" value="{{match.ID}}"> 
                             <input type="submit" value="Beküld" form="betForm">
